--- a/index.html
+++ b/index.html
@@ -5,3 +5,10 @@
 			<title>Sedona</title>
 			<link href="css/style.css" rel="stylesheet">
 		</head>
+	<body>
+	<header class="container">
+		<nav class="main-nav">
+			<ul>
+			<li>Информация</li>
+			<li>Информация</li>
+			
