header is ready

--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
 		<nav class="main-nav">
 			<ul>
 			<li>Информация</li>
-			<li>Информация</li>
+			<li>Фото и видео</li>
+			<li>Карта штата</li>
+			<li>Гостиницы</li>
+			</ul>
+		</nav>
+		<div class="main-logo">
+		<img src="img/logo.png" width="" height="" alt="SEDONA">
+		</div>
+	</header>
+		
 			
