--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
 		<img src="img/logo.png" width="" height="" alt="SEDONA">
 		</div>
 	</header>
+	<main class="container">
+		<div class="description-main">
+		<h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+		<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
+		</div>
 		
 			
