вставил ссылки в main-nav, up-btn, section1

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 	<header class="container">
 		<nav class="main-nav">
 			<ul>
-			<li>Информация</li>
-			<li>Фото и видео</li>
-			<li>Карта штата</li>
-			<li>Гостиницы</li>
+			<li><a href="#">Информация</a></li>
+			<li><a href="#">Фото и видео</a></li>
+			<li><a href="#">Карта штата</a></li>
+			<li><a href="#">Гостиницы</a></li>
 			</ul>
 		</nav>
+		<div class="up-btn">
+		<a href="#"class="up-btn"><img src="img/up-btn" width="" height=""></a>
+		</div>
 		<div class="main-logo">
 		<img src="img/logo.png" width="" height="" alt="SEDONA">
 		</div>
@@ -24,5 +27,28 @@
 		<h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
 		<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
 		</div>
+		<section>
+		<div class="fact1">
+		<h2>Настоящий городок</h2>
+		<p class="white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+		</div>
+		<div class="img1">
+		<img src="img/img1" width="" height="" alt="real city">
+		</div>
+		</section>
+		<div class="features">
+			<div class="features-item">
+			<b class="features-name">Жилье</b>
+			<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+			</div>
+			<div class="features-item">
+			<b class="features-name">Еда</b>
+			<p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь</p>
+			</div>
+			<div class="features-item">
+			<b class="features-name">Сувениры</b>
+			<p>Не только китайского, но и местного производства!</p>
+			</div>
+		
 		
 			
