--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
 			<b class="features-name">Сувениры</b>
 			<p>Не только китайского, но и местного производства!</p>
 			</div>
+		</div>
+		<section>
+		<div class="fact1">
+		<h2>Там есть мост дьявола</h2>
+		<p class="white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+		</div>
+		<div class="img2">
+		<img src="img/img2" width="" height="" alt="devil's bridge">
+		</div>
+		</section>
 		
 		
 			
