--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 		<img src="img/img2" width="" height="" alt="devil's bridge">
 		</div>
 		</section>
+		<div class="feature3-5">
+		<h2 class="">
 		
 		
 			
