--- a/index.html
+++ b/index.html
@@ -28,39 +28,38 @@
 		<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
 		</div>
 		<section>
-		<div class="fact1">
+		<div class="facts">
 		<h2>Настоящий городок</h2>
+		<p>№1</p>
 		<p class="white">Седона не аттракцион для туристов, там течет своя жизнь</p>
 		</div>
 		<div class="img1">
 		<img src="img/img1" width="" height="" alt="real city">
 		</div>
-		</section>
 		<div class="features">
-			<div class="features-item">
-			<b class="features-name">Жилье</b>
+			<ul>
+			<li class="feature-item feature-rent">
+			<h2>Жильё</h2>
 			<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-			</div>
-			<div class="features-item">
-			<b class="features-name">Еда</b>
-			<p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь</p>
-			</div>
-			<div class="features-item">
-			<b class="features-name">Сувениры</b>
-			<p>Не только китайского, но и местного производства!</p>
-			</div>
+			</li>
+			<li class="feature-item feature-food">
+			<h2>Еда</h2>
+			<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+			</li>
+			<li class="feature-item feature-surprise">
+			<h2>Сувениры</h2>
+			<p>Не только китайского, но и местного производства</p>
+			</li>
+			</ul>
 		</div>
-		<section>
-		<div class="fact1">
+		<div class="facts">
 		<h2>Там есть мост дьявола</h2>
 		<p class="white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 		</div>
 		<div class="img2">
 		<img src="img/img2" width="" height="" alt="devil's bridge">
 		</div>
+		<div class="facts">
 		</section>
-		<div class="feature3-5">
-		<h2 class="">
-		
 		
 			
