--- a/index.html
+++ b/index.html
@@ -54,12 +54,39 @@
 		</div>
 		<div class="facts">
 		<h2>Там есть мост дьявола</h2>
+		<p>№2</p>
 		<p class="white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 		</div>
 		<div class="img2">
 		<img src="img/img2" width="" height="" alt="devil's bridge">
 		</div>
 		<div class="facts">
+			<div class="facts-last">
+				<h2>Небольшая площадь</h2>
+				<p>№3</p>
+				<p>Все достопримечательности находятся очень близко</p>
+			</div>
+			<div class="facts-last">
+				<h2>Красивая дорога</h2>
+				<p>№4</p>
+				<p>Ехать в седону из лас-вегаса совсем не скучно!</p>
+			</div>
+			<div class="facts-last">
+				<h2>Мало туристов</h2>
+				<p>№5</p>
+				<p>Большинство едет в гранд каньон и толпится там</p>
+				</div>
+		</div>
 		</section>
-		
+		<div class="interesting">
+		<b>Заинтересовались?</b>
+		<p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
+		<div class="search">
+			<p>Поиск гостиницы в седоне</p>
+			</div>
+			</div>
+	<footer>
+		<b>#visitsedona</b>
+		<div class="social">
+		<a class="tw" href="#">
 			
